# personal-finance-tracker

./: .env.exemple  .gitignore  Makefile  README.md  docker-compose.yml  finance-tracker.spec  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 10d48f683bb9_create_transactions_table.py  4509b646c55f_create_categories_table.py  6479886f489c_bootstrap.py  9e27f65a6b81_bootstrap.py  e7f294cb27e2_merge_heads.py  fedad2007a6a_create_accounts_table.py
app/: db.py  gui.py  main.py  models.py
app/ui/: dashboard_window.py  main_window.py
exports/: transactions_20251111_194955.csv  transactions_20251111_195122.csv
installer/: finance-tracker-installer.iss
personal_finance_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: check_db_helpers.py  seed_accounts.py  seed_categories.py
